# AgenticBlog

./: README.md  final_report.json  final_report_20250412_014141.json  final_report_old.html  fix_manager.py  pyproject.toml  sample_report_data.json  test_html_generator.py  test_report_20250412_134847.html  test_report_20250412_135023.html
agenticblog.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
reports_archive/: final_report_20250410_170807.json  final_report_20250410_172607.json  final_report_20250410_184953.json  final_report_20250410_190003.json  final_report_20250410_220507.json  final_report_20250410_221945.json  final_report_20250410_230051.json  final_report_20250411_000651.json
research_agent/: README.md  config.py  html_generator.py  main.py  manager.py  printer.py
research_agent/agents/: planner_agent.py  risk_agent.py  search_agent.py  tennis_agent.py  verifier_agent.py  writer_agent.py
